--- a/AppTask5/appTask.cshtml
+++ b/AppTask5/appTask.cshtml
@@ -19,7 +19,7 @@
 		<ul id="list"></ul>
 		</br>
 		<a id = "contactLink">Contact</a>
-		<form action='' method='post' class='contactForm' id = 'JSForm'>
+		<form action='' method='post' class='contactForm' id = 'JSForm' style="display:none;">
 		<fieldset class='contactFormFieldset'>
 			<label class='contactFormElement'>Email Address</label>
 			<input class='contactFormElement' type='email' placeholder='joe@example.com' name='email'></input>
