--- a/AppTask5/appTask.cshtml
+++ b/AppTask5/appTask.cshtml
@@ -25,7 +25,7 @@
 		
 		<a id = "contactLink">Contact</a>
 		
-		<form action='' method='post' class='contactForm' id = 'JSForm' style="@initFormStyle">
+		<form action='' method='post' class='contactForm' id = 'JSForm' style=@initFormStyle>
 		<fieldset class='contactFormFieldset'>
 			<label class='contactFormElement'>Email Address</label>
 			<input class='contactFormElement' type='email' placeholder='joe@example.com' name='email'></input>
