--- a/AppTask5/appTask.cshtml
+++ b/AppTask5/appTask.cshtml
@@ -2,7 +2,7 @@
 	String answer = "Message sent";
 	String initFormStyle = "display:none;";
 	if(IsPost) {
-		//initFormStyle = "";
+		initFormStyle = "";
 	}
 }
 
