--- a/AppTask5/appTask.cshtml
+++ b/AppTask5/appTask.cshtml
@@ -1,5 +1,5 @@
 @{
-	String answer = "Message sent";
+	String response = "Message sent";
 	String initFormStyle = "display:none;";
 	if(IsPost) {
 		initFormStyle = "";
@@ -39,6 +39,7 @@
 		</fieldset>
 		<fieldset class='contactFormFieldset'>
 			<button>Submit</button>
+			<label>@response</label>
 		</fieldset>
 		</form>
   	</div>
