--- a/AppTask5/appTask.cshtml
+++ b/AppTask5/appTask.cshtml
@@ -40,7 +40,7 @@
 		</fieldset>
 		<fieldset class='contactFormFieldset'>
 			<button>Submit</button>
-			<label class='contactFormElement'>@response</label>
+			<label>@response</label>
 		</fieldset>
 		</form>
   	</div>
