--- a/AppTask5/appTask.cshtml
+++ b/AppTask5/appTask.cshtml
@@ -3,7 +3,7 @@
 	String initFormStyle = "display:none;";
 	if(IsPost) {
 		initFormStyle = "";
-		response = "Message sent"
+		response = "Message sent";
 	}
 }
 
@@ -40,7 +40,7 @@
 		</fieldset>
 		<fieldset class='contactFormFieldset'>
 			<button>Submit</button>
-			<label>@response</label>
+			<label class='contactFormElement'>@response</label>
 		</fieldset>
 		</form>
   	</div>
