--- a/Checkers/Checkers.css
+++ b/Checkers/Checkers.css
@@ -40,11 +40,12 @@
                 display: block;
                 border: 0;
                 color: #F1F1FF;
-                border-radius: 5px;
+                border-radius: 10px;
                 cursor: pointer;
-                margin: 20px auto 10px;
+                margin: 20px center 10px;
                 float: left;
-                padding: 10px;
+                padding: 15px;
+                margin: 5px;
                 background-color:black;}
 
                 
@@ -52,11 +53,12 @@
                 display: block;
                 border: 0;
                 color: #F1F1FF;
-                border-radius: 5px;
+                border-radius: 10px;
                 cursor: pointer;
-                margin: 20px auto 10px;
+                margin: 20px center 10px;
                 float: left;
-                padding: 10px;
+                padding: 15px;
+                margin: 5px;
                 background-color:black;}
 
                 
@@ -64,10 +66,11 @@
                 display: block;
                 border: 0;
                 color: #F1F1FF;
-                border-radius: 5px;
+                border-radius: 10px;
                 cursor: pointer;
-                margin: 20px auto 10px;
+                margin: 20px center 10px;
                 float: left;
-                padding: 10px;
+                padding: 15px;
+                margin: 5px;
                 background-color:black;}
-                
+             
